[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "response-bandwidth-limiter"
version = "0.1.1"
description = "A simple response bandwidth limiting extension for FastAPI and Starlette"
readme = "README.md"
authors = [
    {name = "kirisaki77", email = "110320276+kirisaki77@users.noreply.github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

# 必須の依存関係（標準ライブラリは含めない）
dependencies = []

[project.optional-dependencies]
# 開発用依存関係（テスト、ドキュメント作成など）
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "fastapi>=0.136.0",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.44.0",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/kirisaki77/response-bandwidth-limiter"

[tool.setuptools]
packages = ["response_bandwidth_limiter"]
